@@ -7,6 +7,7 @@ LastUpdate=2021/10/31
     2021/10/23 - Updated gpsinstall to version 3.23.1
     2021/10/31 - Added Weather app and Conky config to display current weather plus hourly and daily forecasts. 
     2021/11/12 - Added the option to select left or right side location for the Conky weather display.
+							 - Added stop Conky functions.
 
 1.1.10
     2021/09/22 - Added nmon - Linux performance monitor.
